--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 </head>
 <body>
     <div id="container">
-        <a target="_blank" href="ddmenu-template.html"  >drop-down menu</a>
+        <a href="ddmenu-template.html" target="_blank" >drop-down menu</a>
         <button id="export-scene" class="button"><span>Export GLTF</span></button>
         <button id="export-scene-bin" class="button"><span>Export GLB</span></button>
         <button id="export-sphere" class="button"><span>Export Sphorb</span></button>
