--- a/index.html
+++ b/index.html
@@ -271,10 +271,11 @@
 </head>
 <body>
     <div id="container">
+        
+    
         <a href="ddmenu-template.html" target="_blank" >drop-down menu</a>
         <button id="export-scene" class="button"><span>Export GLTF</span></button>
-        <button id="export-scene-bin" class="button"><span>Export GLB</span></button>
-        <button id="export-sphere" class="button"><span>Export Sphorb</span></button>
+    <button class="btn btn-success" onclick="location.href='http://google.com';">port-sphere" class="button">
         <button id="entvr" class="button" onclick="evr()"><span>Enter VR</span></button>
         <button id="cam2" class="button" onclick="cmm2()"><span>Camera 2</span></button>
         <button id="screenshot-p" class="button" onclick="screenshotp()"><span>screen persp</span></button>
