--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 <body>
     <div id="container">
         
-    
+    <button class="btn btn-success" onclick="location.href='http://google.com';">hiiooglr</button>
         <a href="ddmenu-template.html" target="_blank" >drop-down menu</a>
         <button id="export-scene" class="button"><span>Export GLTF</span></button>
     <button class="btn btn-success" onclick="location.href='http://google.com';">port-sphere" class="button">
