--- a/index.html
+++ b/index.html
@@ -272,9 +272,8 @@
 <body>
     <div id="container">
         
-    <button class="btn btn-success" onclick="location.href='http://google.com';">hiiooglr</button>
-        <a href="ddmenu-template.html" target="_blank" >drop-down menu</a>
-        <button id="export-scene" class="button"><span>Export GLTF</span></button>
+    <button class="button" onclick="location.href='http://google.com';">hiiooglr</button>
+        <<button id="export-scene" class="button"><span>Export GLTF</span></button>
     <button class="btn btn-success" onclick="location.href='http://google.com';">port-sphere" class="button">
         <button id="entvr" class="button" onclick="evr()"><span>Enter VR</span></button>
         <button id="cam2" class="button" onclick="cmm2()"><span>Camera 2</span></button>
