--- a/index.html
+++ b/index.html
@@ -271,8 +271,11 @@
 </head>
 <body>
     <div id="container">
-        
-    <button class="button" onclick="location.href='http://google.com';">hiiooglr</button>
+            <button class="button" onclick="location.href='index.html';" target="_blank" >google</button>
+    <button class="button" onclick="location.href='v1_new.html';" target="_blank" >google</button>
+    <button class="button" onclick="location.href='ddmenu-template.html';" target="_blank" >google</button>
+
+    <button class="button" onclick="location.href='http://google.com';" target="_blank" >google</button>
         <<button id="export-scene" class="button"><span>Export GLTF</span></button>
     <button class="btn btn-success" onclick="location.href='http://google.com';">port-sphere" class="button">
         <button id="entvr" class="button" onclick="evr()"><span>Enter VR</span></button>
