--- a/index.html
+++ b/index.html
@@ -271,10 +271,14 @@
 </head>
 <body>
     <div id="container">
-            <button class="button" onclick="location.href='index.html';" target="_blank" >google</button>
-    <button class="button" onclick="location.href='v1_new.html';" target="_blank" >google</button>
-    <button class="button" onclick="location.href='ddmenu-template.html';" target="_blank" >google</button>
-
+            <button class="button" onclick="location.href='index.html';" target="_blank" >INDEX</button>
+    <button class="button" onclick="location.href='v1_new.html';" target="_blank" >V1_NEW</button>
+    <button class="button" onclick="location.href='ddmenu-template.html';" target="_blank" >DDMENU-T</button>
+    <button class="button" onclick="location.href='v2_new.html';" target="_blank" >V2_NEW</button>
+    <button class="button" onclick="location.href='v3_new.html';" target="_blank" >V3_NEW</button>
+    <button class="button" onclick="location.href='v4_new.html';" target="_blank" >V4_NEW</button>
+    <button class="button" onclick="location.href='v5_new.html';" target="_blank" >V5_NEW</button>
+<!--
     <button class="button" onclick="location.href='http://google.com';" target="_blank" >google</button>
         <<button id="export-scene" class="button"><span>Export GLTF</span></button>
     <button class="btn btn-success" onclick="location.href='http://google.com';">port-sphere" class="button">
@@ -282,7 +286,7 @@
         <button id="cam2" class="button" onclick="cmm2()"><span>Camera 2</span></button>
         <button id="screenshot-p" class="button" onclick="screenshotp()"><span>screen persp</span></button>
         <button id="screenshot-r" class="button" onclick="screenshotr()"><span>screen equi</span></button>
-
+-->
 
 
 
