--- a/index.html
+++ b/index.html
@@ -274,7 +274,11 @@
             <button class="button" onclick="location.href='index.html';" target="_blank" >INDEX</button>
     <button class="button" onclick="location.href='v1_new.html';" target="_blank" >V1_NEW</button>
     <button class="button" onclick="location.href='ddmenu-template.html';" target="_blank" >DDMENU-T</button>
-    <button class="button" onclick="location.href='v2_new.html';" target="_blank" >V2_NEW</button>
+    <button class="button" onclick="location.href='dd-exporter.html';" target="_blank" >DD-Exporter</button>
+    <button class="button" onclick="location.href='empty.html';" target="_blank" >Empty</button>
+    
+        
+        <button class="button" onclick="location.href='v2_new.html';" target="_blank" >V2_NEW</button>
     <button class="button" onclick="location.href='v3_new.html';" target="_blank" >V3_NEW</button>
     <button class="button" onclick="location.href='v4_new.html';" target="_blank" >V4_NEW</button>
     <button class="button" onclick="location.href='v5_new.html';" target="_blank" >V5_NEW</button>
