--- a/ddmenu-template.html
+++ b/ddmenu-template.html
@@ -1879,7 +1879,10 @@
                     views
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" onclick="cmm1()">Cam1</a>
+                    <a class="dropdown-item" onclick="window.open("https://hubs.mozilla.com", "_blank");">Hubs</a>
+                    <a class="dropdown-item" onclick="window.open("https://spoke.mozilla.com", "_blank");">Spoke</a>
+                    <a class="dropdown-item" onclick="window.open("https://sketchfab.com", "_blank");">Sketchfab</a>
+
                     <a class="dropdown-item" onclick="cmm2()">Cam2</a>
                     <a class="dropdown-item" onclick="cmm3()">Cam3</a>
                     <a class="dropdown-item" onclick="cmm4()">Cam4</a>
