--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -1850,13 +1850,11 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CADBOXX</a>
+        <!--a class="navbar-brand" href="#">CADBOXX</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <li class="nav-item dropdown">
+        </button>-->
+<!--li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     EXPORT
                 </a>
@@ -1874,7 +1872,24 @@
                     <a class="dropdown-item" id="export-redbyy">BYY</a>
                     <a class="dropdown-item" id="export-redbzz">BZZ</a>
                 </div>
+            </li>-->
+        
+                    <a class="dropdown-item" id="hubs">HUBS</a>
+                    <a class="dropdown-item" id="spoke">SPO<E/a>
+                    <a class="dropdown-item" id="cadboxx">CADBOXX</a>
+                    <a class="dropdown-item" id="sketchfab">SKETCHFAB</a>
+                    <a class="dropdown-item" id="downers">DOWNLOADS</a>
+                    <a class="dropdown-item" id="EXPORTERS">BPP</a>
+                    <a class="dropdown-item" id="export-redbqq">BQQ</a>
+                    <a class="dropdown-item" id="export-redbrr">BRR</a>
+                    <a class="dropdown-item" id="export-redbss">BSS</a>
+                    <a class="dropdown-item" id="export-redbxx">BXX</a>
+                    <a class="dropdown-item" id="export-redbyy">BYY</a>
+                    <a class="dropdown-item" id="export-redbzz">BZZ</a>
+                </div>
             </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     views
