--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -1191,10 +1191,10 @@
             <a-entity id="g4" gltf-model="#boxglbgreen" position="-5 5 5" rotation="0 0 0" dynamic-body click-impulse visible="true"></a-entity>
             <a-entity id="g5" gltf-model="#boxglbgreen" position="0 5 -5" rotation="0 0 0" dynamic-body click-impulse visible="true"></a-entity>
             <a-entity id="g6" gltf-model="#boxglbgreen" position="0 5 5" rotation="0 0 0" dynamic-body click-impulse visible="true"></a-entity>
-
+-->
             <a-entity id="gg1" gltf-model="#cadboxx-floor" position="0 0 0" rotation="0 0 0" static-body visible="false"></a-entity>
             <a-entity id="gg2" gltf-model="#floor-t" position="0 0 0" rotation="0 0 0" static-body visible="true"></a-entity>
--->
+
 
             <!--templates-->
             <!--crankshaft
@@ -1860,8 +1860,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="https://www.sketchfab.com/fasteng/" target="_blank" rel="noopener">SKETCHFAB</a>
-                    <a class="dropdown-item" href="https://www.sketchfab.com/fasteng/" target="_blank" rel="noopener">SKETCHFAB</a>
-                    <a class="dropdown-item" href="https://www.sketchfab.com/fasteng/" target="_blank" rel="noopener">SKETCHFAB</a>
+                    <a class="dropdown-item" href="https://www.hubs.mozilla.com.com" target="_blank" rel="noopener">SKETCHFAB</a>
+                    <a class="dropdown-item" href="https://www.spoke.mozilla.com target="_blank" rel="noopener">SKETCHFAB</a>
 
                     
                     
