--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -1877,7 +1877,7 @@
                 </div>
             </li>
         
-                    <a class="dropdown-item" id="hubs">HUBS</a>
+                    <!--a class="dropdown-item" id="hubs">HUBS</a>
                     <a class="dropdown-item" id="spoke">SPO<E/a>
                     <a class="dropdown-item" id="cadboxx">CADBOXX</a>
                     <a class="dropdown-item" id="sketchfab">SKETCHFAB</a>
@@ -1889,8 +1889,8 @@
                     <a class="dropdown-item" id="export-redbxx">BXX</a>
                     <a class="dropdown-item" id="export-redbyy">BYY</a>
                     <a class="dropdown-item" id="export-redbzz">BZZ</a>
-                </div>
-            </li>
+                <div>
+            </li>-->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
             <li class="nav-item dropdown">
