--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -1859,9 +1859,9 @@
                     PLATFORMS
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="https://www.sketchfab.com/fasteng/" target="_blank" rel="noopener">SKETCHFAB</a>
-                    <a class="dropdown-item" href="https://www.hubs.mozilla.com" target="_blank" rel="noopener">HUBS</a>
-                    <a class="dropdown-item" href="https://www.spoke.mozilla.com" target="_blank" rel="noopener">SPOKE</a>
+                    <a class="dropdown-item" href="https://sketchfab.com/fasteng/" target="_blank" rel="noopener">SKETCHFAB</a>
+                    <a class="dropdown-item" href="https://hubs.mozilla.com/" target="_blank" rel="noopener">HUBS</a>
+                    <a class="dropdown-item" href="https://hubs.mozilla.com/spoke" target="_blank" rel="noopener">SPOKE</a>
                         <a class="dropdown-item" href="V1_NEW.html" target="_blank" rel="noopener">V1_NEW</a>
                         <a class="dropdown-item" href="V2_NEW.html" target="_blank" rel="noopener">V2_NEW</a>
                         <a class="dropdown-item" href="V3_NEW.html" target="_blank" rel="noopener">V3_NEW</a>
