--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -351,7 +351,7 @@
         <button id="screenshot-r" class="button" onclick="screenshotr()"><span>screen equi</span></button>
         <button id="export-redbzz" class="button"><span>Export Car</span></button>
         <button type="button" class="button" onclick="openNav()">HELP</button>
-    </div>
+    </div>-->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -368,7 +368,7 @@
 
         </div>
     </div>
-        -->
+        
     <div class="container-flex">
         <!--<a-scene physics="gravity:-10;friction:0.1;restitution:0.5" debug="true" stats="false" loading-screen={`enabled: false`}>
             <a-assets>-->
