--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -357,11 +357,11 @@
         <div class="overlay-content">
             <button class="clickable" onclick="cmm8()">Choose device tytpe</button>
             <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
-            <h4>It is not link to another system but can use from ANY. </h4>
-            <h4>Constrain parts relative to each other!</h4>
+            <h4>It is not linked to another system but can use files from ANY. </h4>
+            <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
             <h4>Create stunning animations in Virtual Reality.</h4>
-            <h4></h4>
+            <h4>Create amazing animations and hybrid simulations to study the assembly.</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
