--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div id="container">
             <button class="button" onclick="location.href='index.html';" target="_blank" >INDEX</button>
             <button class="button" onclick="location.href='ddmenu-template.html';" target="_blank" >DDMENU-T</button>
-            <button class="button" onclick="location.href='dd-exporter.html';" target="_blank" >DD-Exporter</button>
+            <button class="button" onclick="location.href='landing.html';" target="_blank" >Landing</button>
             
             <button class="button" onclick="location.href='V1_NEW.html';" target="_blank" >V1_NEW</button>        
             <button class="button" onclick="location.href='V2_NEW.html';" target="_blank" >V2_NEW</button>
