--- a/ddmenu-template.html
+++ b/ddmenu-template.html
@@ -350,24 +350,24 @@
         <button id="screenshot-r" class="button" onclick="screenshotr()"><span>screen equi</span></button>
         <button id="export-redbzz" class="button"><span>Export Car</span></button>
         <button type="button" class="button" onclick="openNav()">HELP</button>
-    </div>
+    </div>-->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <button class="clickable" onclick="cmm8()">Choose device tytpe</button>
+            
             <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
-            <h4>It is not link to another system but can use from ANY. </h4>
+            <h4>It is not linked to another system but can use files from ANY CAD or 3D System. </h4>
             <h4>Constrain parts relative to each other!</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
             <h4>Create stunning animations in Virtual Reality.</h4>
+            <h4>Please Register to gain full access of all features.</h4>
+            <h4>To enter the scene presss the "x" on the right</h4>
             <h4></h4>
             <h4></h4>
-            <h4></h4>
-            <h4></h4>
-
+             <button type="button" class="button" onclick="openNav()">REGISTER</button>
         </div>
     </div>
-        -->
+        
     <div class="container-flex">
         <!--<a-scene physics="gravity:-10;friction:0.1;restitution:0.5" debug="true" stats="false" loading-screen={`enabled: false`}>
             <a-assets>-->
