--- a/index.html
+++ b/index.html
@@ -289,11 +289,23 @@
                 <button id="screenshot-p" class="button" onclick="screenshotp()"><span>screen persp</span></button>
                 <button id="screenshot-r" class="button" onclick="screenshotr()"><span>screen equi</span></button>
         -->
-        
-
-
         </div>
-
+<div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            
+            <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
+            <h4>It is not linked to another system but can use files from ANY CAD or 3D System. </h4>
+            <h4>Constrain parts relative to each other!</h4>
+            <h4>Export new geometry with textures embedded in the model.</h4>
+            <h4>Create stunning animations in Virtual Reality.</h4>
+            <h4>Please Register to gain full access of all features.</h4>
+            <h4>To enter the scene presss the "x" on the right</h4>
+            <h4>To try difeerent scenes with differeent features select the buttons at the top.</h4>
+            <h4></h4>
+             <button type="button" class="button" onclick="closeNav()">ENTER</button>
+        </div>
+    </div>
     <a-scene gltf-exporter physics renderer="colorManagement: true;" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" device-orientation-permission-ui="">
         <a-assets>
             <a-mixin id="cam-motion"></a-mixin>
