--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -289,6 +289,7 @@
         .overlay {
             height: 100%;
             width: 100%;
+            opacity: 0.3;
             display: none;
             position: fixed;
             z-index: 1;
