--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -342,21 +342,11 @@
 </head>
 
 <body>
-    <!--<div id="container">
-        <button id="export-scene" class="button"><span>Export GLTF</span></button>
-        <button id="export-scene-bin" class="button"><span>Export GLB</span></button>
-        <button id="export-sphere" class="button"><span>Export Sphorb</span></button>
-        <button id="entvr" class="button" onclick="evr()"><span>Enter VR</span></button>
-        <button id="camra2" class="button" onclick="cmm2()"><span>Camera 2</span></button>
-        <button id="screenshot-p" class="button" onclick="screenshotp()"><span>screen persp</span></button>
-        <button id="screenshot-r" class="button" onclick="screenshotr()"><span>screen equi</span></button>
-        <button id="export-redbzz" class="button"><span>Export Car</span></button>
-        <button type="button" class="button" onclick="openNav()">HELP</button>
-    </div>-->
+    
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <button class="clickable" onclick="cmm8()">Choose device tytpe</button>
+            <button class="clickable" onclick="cmm8()">Click X to enter</button>
             <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
