--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -289,7 +289,7 @@
         .overlay {
             height: 100%;
             width: 100%;
-            opacity: 0.3;
+            opacity: 0.6;
             display: none;
             position: fixed;
             z-index: 1;
@@ -301,10 +301,10 @@
 
         .overlay-content {
             position: relative;
-            top: 25%;
+            top: 10%;
             width: 100%;
             text-align: center;
-            margin-top: 30px;
+            color:"white";
         }
 
         .overlay a {
