--- a/V5_NEW.html
+++ b/V5_NEW.html
@@ -301,10 +301,10 @@
 
         .overlay-content {
             position: relative;
-            top: 10%;
-            width: 100%;
+            top: 30%;
+            width: 80%;
             text-align: center;
-            color:"white";
+            color: white;
         }
 
         .overlay a {
