--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             
-            <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
+            <h4>ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ</h4>!</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
@@ -1306,7 +1306,7 @@
     <script src="js/aframe-physics-system.min.js" ></script>
     <script>
             document.querySelector('a-scene').addEventListener('loaded', function () {
-                document.getElementById("myNav").style.display = "block";
+                document.getElementById("myNavhelp01").style.display = "block";
             })
 
     </script>
