--- a/index.html
+++ b/index.html
@@ -343,14 +343,12 @@
 
 <body>
     <div id="myNav" class="overlay">
-        <div id="btnbar" class="inkine-block" >
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a ref="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
+        <div id="btnbar" display="inline-block" >
+            <button class="clickable" onclick="cmm8()">Click X to enter</button>
+            <button class="clickable" onclick="cmm8()">Click X to enter</button>
+            <button class="clickable" onclick="cmm8()">Click X to enter</button>
         </div>
         <div class="overlay-content">
-            <button class="clickable" onclick="cmm8()">Click X to enter</button>
             <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
