--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
         .overlay-content {
             position: relative;
-            top: 30%;
+            top: 0px;
             width: 80%;
             text-align: center;
             color: white;
