--- a/index.html
+++ b/index.html
@@ -1941,13 +1941,13 @@
                     Help Menus
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" onclick="help01()">Help01</a>
-                    <a class="dropdown-item" onclick="help02()">Help01</a>
-                    <a class="dropdown-item" onclick="help03()">Help03</a>
-                    <a class="dropdown-item" onclick="help04()">Help04</a>
-                    <a class="dropdown-item" onclick="help05()">Help05</a>
-                    <a class="dropdown-item" onclick="help06()">Help06</a>
-                    <a class="dropdown-item" onclick="help07()">Help07</a>
+                    <a class="dropdown-item" onclick="myNavh1()">Help01</a>
+                    <a class="dropdown-item" onclick="myNavh2()">Help02</a>
+                    <a class="dropdown-item" onclick="myNavh3()">Help03</a>
+                    <a class="dropdown-item" onclick="myNavh1()">Help04</a>
+                    <a class="dropdown-item" onclick="myNavh1()">Help05</a>
+                    <a class="dropdown-item" onclick="myNavh1()">Help06</a>
+                    <a class="dropdown-item" onclick="myNavh1()">Help07</a>
                     <a class="dropdown-item" onclick="help08()">Help08</a>
                     <a class="dropdown-item" onclick="help09()">Help09</a>
                 </div>
