--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
         </center>
         <center>
-            <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
+            <h4>1111111111111111111</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
@@ -308,7 +308,7 @@
             </div>
         </center>
         <center>
-            <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
+            <h4>22222222222222222</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
@@ -324,13 +324,13 @@
         <div class="overlay-content">
             <center>
             <div id="btnnbar" display="inline-block"  >
-                <button class="clickable" onclick="myNavh1()"> HELP 1</button>
+                <button class="clickable" onclick="myNavh1()">HELP 1</button>
                 <button class="clickable" onclick="myNavh2()">HELP 2</button>
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
             </div>
         </center>
         <center>
-            <h4>cadboxx can create Assemblies of 3D Models from ANY system!</h4>
+            <h4>3333333333</h4>
             <h4>It is not linked to another system but can use files from ANY. </h4>
             <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
             <h4>Export new geometry with textures embedded in the model.</h4>
@@ -1274,7 +1274,7 @@
     <script src="js/aframe-physics-system.min.js" ></script>
     <script>
             document.querySelector('a-scene').addEventListener('loaded', function () {
-                document.getElementById("myNav").style.display = "block";
+                document.getElementById("myNavh01").style.display = "block";
             })
 
     </script>
