--- a/index.html
+++ b/index.html
@@ -280,18 +280,21 @@
         <div class="overlay-content">
             <center>
             <div id="btnnbar" display="inline-block"  >
-                <button class="clickable" onclick="myNavh1()"> HELP 1</button>
+                <button class="clickable" onclick="myNavh1()">HELP 1</button>
                 <button class="clickable" onclick="myNavh2()">HELP 2</button>
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
+                <button class="clickable" onclick="myNavh4()"> HELP 4</button>
+                <button class="clickable" onclick="myNavh5()">HELP 5</button>
+                <button class="clickable" onclick="closeNav()">CLOSE</button>
             </div>
         </center>
         <center>
-            <h4>1111111111111111111</h4>
-            <h4>It is not linked to another system but can use files from ANY. </h4>
-            <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
-            <h4>Export new geometry with textures embedded in the model.</h4>
-            <h4>Create stunning animations in Virtual Reality.</h4>
-            <h4>Create amazing animations and hybrid simulations to study the assembly.</h4>
+            <h4>GETTING STARTED : CREATING GEOMETRY</h4>
+            <h4>USE THE GEOMETRY PULL-DOMN TO PLACE PRIMITIVE SHAPES</h4>
+            <h4>SELECT THE SHAPE TO MODIFY AND SET POSITION, ROTATION AND SCALE.</h4>
+            <h4>ADD OTHER SHAPES TO CREATE THE DESIRED COMPONENT BODY.</h4>
+            <h4>ADD TEXTURES TO THE INDIVIDUAL BODIES AS REQUIRED.K</h4>
+            <h4>ADD ANCHOR PLANE AND CONNECTOR PLANE(S).</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
@@ -305,15 +308,17 @@
                 <button class="clickable" onclick="myNavh1()"> HELP 1</button>
                 <button class="clickable" onclick="myNavh2()">HELP 2</button>
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
+                <button class="clickable" onclick="myNavh4()"> HELP 4</button>
+                <button class="clickable" onclick="myNavh5()">HELP 5</button>
+                <button class="clickable" onclick="closeNav()">CLOSE</button>
             </div>
         </center>
         <center>
-            <h4>22222222222222222</h4>
-            <h4>It is not linked to another system but can use files from ANY. </h4>
-            <h4>Constrain parts relative to each other by applyingh physics constraints.</h4>
-            <h4>Export new geometry with textures embedded in the model.</h4>
-            <h4>Create stunning animations in Virtual Reality.</h4>
-            <h4>Create amazing animations and hybrid simulations to study the assembly.</h4>
+            <h4>GETTING STARTED : MODEL ASSEMBLY</h4>
+            <h4></h4>
+            <h4></h4>
+            <h4></h4>
+            <h4></h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
@@ -327,6 +332,10 @@
                 <button class="clickable" onclick="myNavh1()">HELP 1</button>
                 <button class="clickable" onclick="myNavh2()">HELP 2</button>
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
+                <button class="clickable" onclick="myNavh4()"> HELP 4</button>
+                <button class="clickable" onclick="myNavh5()">HELP 5</button>
+                <button class="clickable" onclick="closeNav()">CLOSE</button>
+                
             </div>
         </center>
         <center>
