--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,11 @@
             }
 
             function closeNav() {
-                                document.getElementById("myNav").style.display = "none";
+                document.getElementById("myNavh01").style.display = "none";
+                document.getElementById("myNavh02").style.display = "none";
+                document.getElementById("myNavh03").style.display = "none";
+                document.getElementById("myNavh04").style.display = "none";
+                document.getElementById("myNavh05").style.display = "none";
 
             }
     </script>
