--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
                 <button class="clickable" onclick="myNavh4()"> HELP 4</button>
                 <button class="clickable" onclick="myNavh5()">HELP 5</button>
-                <button class="clickable" onclick="closeNav()">CLOSE</button>
+                <button class="clickable" onclick="closeAllNav()">CLOSE</button>
             </div>
         </center>
         <center>
@@ -310,7 +310,7 @@
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
                 <button class="clickable" onclick="myNavh4()"> HELP 4</button>
                 <button class="clickable" onclick="myNavh5()">HELP 5</button>
-                <button class="clickable" onclick="closeNav()">CLOSE</button>
+                <button class="clickable" onclick="closeAllNav()">CLOSE</button>
             </div>
         </center>
         <center>
@@ -334,7 +334,7 @@
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
                 <button class="clickable" onclick="myNavh4()"> HELP 4</button>
                 <button class="clickable" onclick="myNavh5()">HELP 5</button>
-                <button class="clickable" onclick="closeNav()">CLOSE</button>
+                <button class="clickable" onclick="closeAllNav()">CLOSE</button>
                 
             </div>
         </center>
@@ -1495,7 +1495,7 @@
                 document.getElementById("myNav").style.display = "block";
             }
 
-            function closeNav() {
+            function closeAllNav() {
                 document.getElementById("myNavh01").style.display = "none";
                 document.getElementById("myNavh02").style.display = "none";
                 document.getElementById("myNavh03").style.display = "none";
